動作しなかったので修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,16 @@ server.port=8081
 spring.main.banner-mode=off
 
 # Security関連設定
+spring.security.oauth2.client.registration.google.client-id=[各環境に合わせて設定]
+spring.security.oauth2.client.registration.google.client-secret=[各環境に合わせて設定]
+spring.security.oauth2.client.registration.google.redirect-uri=[各環境に合わせて設定]
+spring.security.oauth2.client.registration.google.scope=openid, profile, email
+spring.security.oauth2.client.registration.google.client-name=Google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # SSL関連設定
 server.forward-headers-strategy=native
